Fix duplicate styles issues with spacing

--- a/resources/scss/common/_spacing.scss
+++ b/resources/scss/common/_spacing.scss
@@ -5,9 +5,9 @@
 
 //---- Responsive ----//
 @media (min-width: (functions.breakpoint(mobile-2) + 1)) {
-    @include mixins.spacing('d');
+    @include mixins.spacing('d', '.');
 }
 
 @media (max-width: functions.breakpoint(mobile-2)) {
-    @include mixins.spacing('m');
+    @include mixins.spacing('m', '.');
 }
